// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> renders correctly external link 1`] = `
<DocumentFragment>
  <a
    href="https://twitter.com"
    rel="noreferrer"
    target="_blank"
  >
    Twitter
  </a>
</DocumentFragment>
`;

exports[`<Link /> renders correctly internal link 1`] = `
<DocumentFragment>
  <a
    href="/sobre"
    target="_self"
  >
    Sobre
  </a>
</DocumentFragment>
`;
